# tinyuf2

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
main/: CMakeLists.txt  dummy.c
ports/: family_support.cmake
ports/espressif/: CMakeLists.txt  README.md
ports/espressif/apps/update_tinyuf2/main/: bootloader_bin.c
ports/espressif/boards/generic_esp32s2/: board.h
ports/espressif/boards/generic_esp32s3/: board.h
scripts/: tinyuf2.py
src/: CMakeLists.txt  board_api.h  main.c  msc.c  tinyuf2.cmake
